--- a/reservadequadras/pubspec.yaml
+++ b/reservadequadras/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   image_picker: ^1.0.4
   file_picker: ^4.0.10
   cached_network_image: ^3.2.0
-
+  go_router: ^7.1.1
+  http: ^0.13.3 
   cupertino_icons: ^1.0.2
   path: ^1.8.3
   sqflite: ^2.3.0
